--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -17,4 +17,6 @@ html {
 body {
   background: white;
   height: 100vh;
+  overflow-y: hidden;
+  overflow-x: scroll;
 }
